@@ -1,12 +1,21 @@
 {
-  "timestamp" : "2025-11-20T00:58:43Z",
+  "timestamp" : "2025-11-23T01:07:52Z",
   "count_outdated" : 122,
   "uniques_outdated" : 104,
-  "count" : 123,
-  "uniques" : 105,
+  "count" : 124,
+  "uniques" : 106,
   "clones" : [
     {
       "timestamp": "2025-11-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-11-22T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
